static/css/styles.css
/* nav elements */
.navbar {
  background-color: transparent;
  padding-inline: 10px;
}

/* plugin_bideo */
html, body {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

#container {
  overflow: hidden;
  position: absolute;
  top: 0; left: 0; right: 0; bottom: 0;
}

#background_video {
  position: absolute;

  top: 50%; left: 50%;
  transform: translate(-50%, -50%);

  object-fit: cover;
  height: 100%; width: 100%;
}

#video_cover {
  position: absolute;

  width: 100%; height: 100%;

  background: url('/Group-Project-3/plugin_bideo/video_cover.jpeg') no-repeat;
  background-size: cover;
  background-position: center;
}

#video_controls {
  position: absolute;
  left: 50%;
  transform: translate(-50%, 0);
}

#play img {
  width: 100px;
}
#pause img {
  width: 90px;
}
#pause {
  display: none;
}

@media (min-width: 768px) {
  #video_controls {
    display: none;
  }
}

/* index page specific styles */
#overlay {
  position: absolute;
  top: 0; right: 0; left: 0; bottom: 0;
  background: rgba(0,0,0,0.5);
}

#index_page {
  position: absolute;
  top: 40%;
  text-align: center;
}

/* Granim plugin */
#canvas-image-blending {
  position: absolute;
  display: block;
  width: 100%;
  height: 100%;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

/* styles */
.content-background {
  z-index: 3;
  font-size: 16px;
  text-decoration-line: none;
  color: black;
  letter-spacing: 1px;
  margin-inline: 5px;
  margin-top: 5px;
  background-color: rgba(255, 255, 255, 0.5);
  border: 2px solid rgba(255,255,255,0.5);
  border-radius: 10px;
  padding: 5px;
}

@media (max-width: 768px) { /* Navbar has to shrink. Otherwise, */
  .content-background {     /* the options wrap and look weird. */
    font-size: 14px;
    letter-spacing: 0px;
    margin-left: 5px;
    margin-right: 5px;
  }
  .navbar {
    padding-inline: 5px;
  }
}

a:hover {   /* links light up when hovered over and overwrite default blue */
  color: black;
  background-color: whitesmoke;
}

#selectedStateName {  /* dropdown on the same line as current state name */
  display: inline;
  text-transform: capitalize;
  text-align: center;
}

select {
  text-align: center;
}

.row {
  text-align: center;
}

#footer {
  position: absolute;
  bottom: 0; right: 0;
}
#footer a {
  color: rgba(255,255,255,0.5);
  text-decoration: none;
  margin: 10px;
  font-size: 12px;
}

